--- a/www/views/camera.html
+++ b/www/views/camera.html
@@ -1,5 +1,5 @@
 ﻿<div id="wrapper" class="photo-wrap">
-    <div class="image-holder" style="background-image: url(images/img8.jpg);"></div>
+    <div class="image-holder" id="image-holder" style="background-image: url(images/img8.jpg);"></div>
     <div class="photo-header">
         <ul class="action-icons">
             <li><a href="#"><i class="icon-flash"></i></a></li>
@@ -10,7 +10,7 @@
         <a href="#" class="btn-close"><i class="icon-cross"></i></a>
     </div>
     <div class="item-selection">
-        <a href="#" class="home-button progress-circle progress-0"><span><img src="images/home-button.png" alt="image description" width="26" height="26"></span></a>
+        <a href="#" id="btn-take-picture" class="home-button progress-circle progress-0"><span><img src="images/home-button.png" alt="image description" width="26" height="26"></span></a>
         <ul>
             <li class="active"><a href="#">Photo</a></li>
             <li><a href="#">Video</a></li>
