--- a/www/views/camera.html
+++ b/www/views/camera.html
@@ -1,20 +1,55 @@
-﻿<div id="wrapper" class="photo-wrap">
-    <div class="image-holder" id="image-holder"></div>
-    <div class="photo-header">
-        <ul class="action-icons">
-            <li><a href="#"><i class="icon-flash"></i></a></li>
-            <li><a href="#"><i class="icon-reload"></i></a></li>
-            <li><a href="#"><i class="icon-timer"></i></a></li>
-            <li><a href="#"><i class="icon-stack"></i></a></li>
-        </ul>
-        <a href="#" class="btn-close"><i class="icon-cross"></i></a>
+﻿<div class="controls">
+    <div class="block">
+        <button id="startCameraAboveButton">Start Camera Above HTML</button>
+        <button id="stopCameraButton">Stop Camera</button>
     </div>
-    <div class="item-selection">
-        <a href="#" id="btn-take-picture" class="home-button progress-circle progress-0"><span><img src="images/home-button.png" alt="image description" width="26" height="26"></span></a>
-        <ul>
-            <li class="active"><a href="#">Photo</a></li>
-            <li><a href="#">Video</a></li>
-        </ul>
+    <div class="block">
+        <p style="margin-top:0px"><button id="startCameraBelowButton">Start Camera Behind HTML</button></p>
+        <p style="margin-bottom:0px">
+            Color Effect:
+            <select id="selectColorEffect">
+                <option selected value="none">none</option>
+                <option value="aqua">aqua</option>
+                <option value="blackboard">blackboard</option>
+                <option value="mono">mono</option>
+                <option value="negative">negative</option>
+                <option value="posterize">posterize</option>
+                <option value="sepia">sepia</option>
+                <option value="solarize">solarize</option>
+                <option value="whiteboard">whiteboard</option>
+            </select>
+        </p>
+        <p style="margin-bottom:0px;">
+            Flash Mode:
+            <select id="selectFlashMode">
+                <option selected value="off">off</option>
+                <option value="on">on</option>
+                <option value="auto">auto</option>
+                <option value="torch">torch</option>
+            </select>
+        </p>
+        <div id="androidOnly">
+            <p style="margin-bottom:0px;">
+                Zoom:
+                <span id="zoomValue" style="margin: 0 5px;">1</span>
+                <input type="range" id="zoomSlider" min="1" max="5" value="1" />
+            </p>
+        </div>
     </div>
+    <div class="block">
+        <button id="takePictureButton">Take Picture</button>
+        <button id="switchCameraButton">Switch Camera</button>
+        <button id="changePreviewSize">Change Preview Size</button>
+    </div>
+    <div class="block">
+        <button id="hideButton">Hide</button>
+        <button id="showButton">Show</button>
+    </div>
+    <div class="block">
+        <button id="showSupportedPictureSizes">Supported Picture Sizes</button>
+    </div>
+</div>
+<div class="pictures">
+    <p><img id="originalPicture" width="200" /></p>
 </div>
 <script type="text/javascript" src="js/controllers/camera.js"></script>
