Camera take picture show picture

--- a/www/views/camera.html
+++ b/www/views/camera.html
@@ -1,5 +1,7 @@
 ﻿<div id="wrapper" class="photo-wrap">
-    <div class="image-holder" id="image-holder"></div>
+    <div class="image-holder" id="image-holder">
+        <img id="my-img" style="display:none;"/>
+    </div>
     <div class="photo-header">
         <ul class="action-icons">
             <li><a href="#"><i class="icon-flash"></i></a></li>
