--- a/www/views/camera.html
+++ b/www/views/camera.html
@@ -5,7 +5,7 @@
     <div class="photo-header">
         <ul class="action-icons">
             <li><a href="#"><i class="icon-flash"></i></a></li>
-            <li><a href="#"><i class="icon-reload"></i></a></li>
+            <li><a href="#" id="swith-camera"><i class="icon-reload"></i></a></li>
             <li><a href="#"><i class="icon-timer"></i></a></li>
             <li><a href="#"><i class="icon-stack"></i></a></li>
         </ul>
