--- a/www/views/camera.html
+++ b/www/views/camera.html
@@ -4,12 +4,12 @@
     </div>
     <div class="photo-header">
         <ul class="action-icons">
-            <li><a href="#"><i class="icon-flash"></i></a></li>
+            <li><a href="#" id="btn-flash"><i class="icon-flash"></i></a></li>
             <li><a href="#" id="swith-camera"><i class="icon-reload"></i></a></li>
             <li><a href="#"><i class="icon-timer"></i></a></li>
             <li><a href="#"><i class="icon-stack"></i></a></li>
         </ul>
-        <a href="#" class="btn-close"><i class="icon-cross"></i></a>
+        <a href="#" id="btn-close" class="btn-close"><i class="icon-cross"></i></a>
     </div>
     <div class="item-selection">
         <a href="#" id="btn-take-picture" class="home-button progress-circle progress-0"><span><img src="images/home-button.png" alt="image description" width="26" height="26"></span></a>
