--- a/www/views/categories.html
+++ b/www/views/categories.html
@@ -3,11 +3,11 @@
 <main id="main">
     <ul class="cat-list" id="categories-list">
         <li class="cat">
-            <a href="#">
+            <a href="#" id="btn-all-causes">
                 <div class="image-holder"><img src="images/icon1.png" alt="image description"></div>
                 <div class="text-holder">
                     <strong class="title">All causes</strong>
-                    <span class="count">173 Causes</span>
+                    <span class="count">4 Causes</span>
                 </div>
             </a>
         </li>
