--- a/www/views/slidemenu.html
+++ b/www/views/slidemenu.html
@@ -16,7 +16,7 @@
 </div>
 <div class="container">
     <a href="#" class="menu"><span>menu</span></a>
-    <span class="main-title">Categories</span>
+    <span class="main-title" id="main-title"></span>
     <div class="search"><a href="#"><img src="images/icon-search.png" alt="image description"></a></div>
 </div>
 <script type="text/javascript" src="js/controllers/slidemenu.js"></script>
