--- a/www/scss/main.css
+++ b/www/scss/main.css
@@ -1,4 +1,4 @@
-﻿@import url(jcf.css);
+@import url(jcf.css);
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Set default font family to sans-serif.
