Cause individual screen

--- a/www/views/causes.html
+++ b/www/views/causes.html
@@ -8,7 +8,7 @@
 </main>
 
 <script type="text/x-kendo-template" id="template">
-    <section class="cause-block">
+    <section class="cause-block" onclick="loadcause('#:Id#');">
         <div class="video-holder">
             <iframe width="560" height="175" src="#= VideoUrl #" allowfullscreen=""></iframe>
         </div>
