--- a/www/css/main.css
+++ b/www/css/main.css
@@ -17,7 +17,10 @@ html {
  * Remove default margin.
  */
 body {
-  margin: 0; }
+  margin: 0; 
+background-color: transparent;
+
+}
 
 /* HTML5 display definitions
    ========================================================================== */
