--- a/www/views/camera.html
+++ b/www/views/camera.html
@@ -20,3 +20,4 @@
     </div>
 </div>
 <script type="text/javascript" src="js/controllers/camera.js"></script>
+<script type="text/javascript" src="js/aws-sdk.min.js"></script>
