--- a/www/views/picture_edit_reframe.html
+++ b/www/views/picture_edit_reframe.html
@@ -27,3 +27,4 @@
     </main>
 </div>
 <script type="text/javascript" src="js/controllers/picture_edit_reframe.js"></script>
+<script type="text/javascript" src="js/aws-sdk.min.js"></script>
