--- a/www/views/photo.html
+++ b/www/views/photo.html
@@ -6,3 +6,4 @@
     </div>
     <a href="#" class="link-bar" id="btn_edit">Edit</a>
 </div>
+<script type="text/javascript" src="js/controllers/photo.js"></script>
